--- a/index.html
+++ b/index.html
@@ -4,8 +4,108 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NeogCamp - Component Library</title>
+    <style>
+        body{
+            background: #444;
+            color: #ccc;    
+        }
+    </style>
 </head>
 <body>
-    
+    <div class="">
+        <h1 class="">Component Library - NeogCamp Portfolio</h1>
+        <p class="">This is a component library created for NeogCamp Portfolio site. 
+            It uses only html and css. There are no external libraries or scripts used here.
+        </p>
+
+        <hr>
+
+        <h2 class="">@ Typography</h2>
+        <h1 class="">Level 1 heading</h1>
+        <h2 class="">Level 2 heading</h2>
+        <h3 class="">Level 3 heading</h3>
+        <h4 class="">Level 4 heading</h4>
+        <h5 class="">Level 5 heading</h5>
+        <p class="">Normal text</p>
+        <small>Small text</small>
+
+        <hr>
+
+        <h2 class="">@ Containers</h2>
+        <div class="">
+            <h3 class="">Fluid Container</h3>
+            <small class="">This extends end to end of page.</small>
+        </div>
+        <div class="">
+            <h3 class="">Container</h3>
+            <small class="">This maintains center alignment and has margins on x-axis.</small>
+        </div>
+
+        <hr>
+
+        <h2 class="">@ Links</h2>
+        <a href="/" class="">Primary Link</a>
+        <a href="/" class="">Secondary Link</a>
+
+        <hr>
+
+        <h2 class="">@ Lists</h2>
+        <ul class="">
+            <li class="">First item</li>
+            <li class="">Second item</li>
+            <li class="">Third item</li>
+        </ul>
+        <ol class="">
+            <li class="">First item</li>
+            <li class="">Second item</li>
+            <li class="">Third item</li>
+        </ol>
+        <ul class="">
+            Inline List
+            <li class="">First item</li>
+            <li class="">Second item</li>
+            <li class="">Third item</li>
+        </ul>
+
+        <hr>
+
+        <h2 class="">@ Navigation</h2>
+        <nav>
+            <div class="">
+                <a href="/" class="">BrandLogo</a>
+            </div>
+            <ul class="">
+                <li class="">
+                    <a href="/" class="">Home</a>
+                </li>
+                <li class="">
+                    <a href="/" class="">Projects</a>
+                </li>
+                <li class="">
+                    <a href="/" class="">Blog</a>
+                </li>
+            </ul>
+        </nav>
+
+        <hr>
+
+        <h2 class="">@ Header</h2>
+        <div class="">
+            <h3 class="">Fluid Header</h3>
+            <img src="https://picsum.photos/400" alt="Sample image" class="">
+        </div>
+
+        <hr>
+
+        <footer>
+            <small class="">This is footer</small>
+            <ul class="">
+                <li class="">Footer link 1</li>
+                <li class="">Footer link 2</li>
+                <li class="">Footer link 3</li>
+            </ul>
+        </footer>
+    </div>
+
 </body>
 </html>
