--- a/components.html
+++ b/components.html
@@ -3,9 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
     <title>NeogCamp - Component Library</title>
-    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="base.css">
 </head>
 <body>
     <div class="">
