Before adding typeit library

--- a/index.html
+++ b/index.html
@@ -165,6 +165,7 @@
         </div>
     </div>
 
+    <!-- blogs -->
     <div class="container top-border py--3">
         <div class="flex flex-justify-between flex-align-center">
             <div class="">
