remove react and add javascript to skills

--- a/index.html
+++ b/index.html
@@ -51,23 +51,23 @@
         <h2 class="section-heading my--1">My Skills</h2>
         <p class="text--muted">A list of languages / frameworks that I've learnt so far.</p>
         <div class="flex skill--list py--1">
-            <a href="javascript:void(0);" class="skill--logo text--center" title="Vue JS">
+            <a href="https://vuejs.org" target="_blank" rel="noreferrer" class="skill--logo text--center" title="Vue JS">
                 <img src="/img/vuejs.svg" alt="Vue Js">
                 <p class="my--0">Vue.js</p>
             </a>
-            <a href="javascript:void(0);" class="skill--logo text--center" title="React JS">
-                <img src="/img/reactjs.svg" alt="Vue Js">
-                <p class="my--0">React.js</p>
+            <a href="https://javascript.com" target="_blank" rel="noreferrer" class="skill--logo text--center" title="React JS">
+                <img src="/img/javascript.svg" alt="Vue Js">
+                <p class="my--0">Javascript</p>
             </a>
-            <a href="javascript:void(0);" class="skill--logo text--center" title="Tailwind CSS">
+            <a href="https://tailwindcss.com" target="_blank" rel="noreferrer" class="skill--logo text--center" title="Tailwind CSS">
                 <img src="/img/tailwindcss.svg" alt="Vue Js">
                 <p class="my--0">Tailwind CSS</p>
             </a>
-            <a href="javascript:void(0);" class="skill--logo text--center" title="Bootstrap">
+            <a href="https://getbootstrap.com" target="_blank" rel="noreferrer" class="skill--logo text--center" title="Bootstrap">
                 <img src="/img/bootstrap.svg" alt="Vue Js">
                 <p class="my--0">Bootstrap</p>
             </a>
-            <a href="javascript:void(0);" class="skill--logo text--center" title="Jquery">
+            <a href="https://jquery.com" target="_blank" rel="noreferrer" class="skill--logo text--center" title="Jquery">
                 <img src="/img/jquery.svg" alt="Vue Js">
                 <p class="my--0">Jquery</p>
             </a>
