Added all projects and their links

--- a/projects.html
+++ b/projects.html
@@ -40,7 +40,7 @@
 
         <div class="project--list my--1 flex flex-justify-between">
 
-            <div class="project--card">
+            <!-- <div class="project--card">
                 <div class="project--image">
                     <img src="/img/projects/vueshop2.jpg" alt="project image">
                 </div>
@@ -75,7 +75,8 @@
                         </a>
                     </div>
                 </div>
-            </div>
+            </div> -->
+            
             <div class="project--card">
                 <div class="project--image">
                     <img src="/img/projects/vue_md.png" alt="project screenshot">
@@ -97,14 +98,14 @@
                         </small>
                     </div>
                     <div class="project--desc py--1">
-                        A web-app to preview your markdown files or markdown code. <br>
+                        A web-app to preview your markdown files or markdown code. 
                         You can upload a markdown file or just use online editor to write markdown and check its preview. <br>
                     </div>
                     <div class="project--card--buttons">
-                        <a href="" class="btn--link btn--primary">
+                        <a href="https://vue-markdown-viewer.netlify.app/" target="_blank" rel="noreferrer" class="btn--link btn--primary">
                             <span class="fa fa-external-link-alt"></span>&nbsp; Live Project
                         </a>
-                        <a href="" class="mx--1 btn--link">
+                        <a href="https://github.com/Root-0/vue_md_previewer" target="_blank" rel="noreferrer" class="mx--1 btn--link">
                             <span class="fab fa-github"></span>&nbsp;
                              View Source
                         </a>
@@ -112,18 +113,48 @@
                 </div>
             </div>
 
-
         </div>
 
         <div class="top-border">
             <h3 class="">Mini Projects</h3>
-            <p class="text--muted">Fun projects made while learning respective language/framework</p>
+            <p class="text--muted">Fun projects made during level zero of <a href="https://neog.camp" target="_blank" class="">Neog.camp</a></p>
 
-            <div class="project--list my--1 flex flex-justify between">
+            <div class="mini--projects project--list my--1 flex flex-justify-between">
                 <div class="project--card">
                     <!-- <div class="project--image">
                         <img src="" alt="project image">
                     </div> -->
+                    <span class="project--ribbon">Mark 01</span>
+                    <div class="project--info">
+                        <h3 class="my--1">CLI Quiz - Know me?</h3>
+                        <div class="project--tags py--1 flex">
+                            <small class="project--tag">
+                                Javascript
+                            </small>
+                            <small class="project--tag">
+                                readline-sync.js
+                            </small>
+                        </div>
+                        <div class="project--desc py--1">
+                            A CLI hosted on repl.it. Asks a player 5 questions about me to test how well do they know me and marks them accordingly.
+                        </div>
+                        <div class="project--card--buttons">
+                            <a href="https://repl.it/@thecoon/lessonOneassignment0?embed=1&output=1" target="_blank" rel="noreferrer" class="btn--link btn--primary">
+                                <span class="fa fa-external-link-alt"></span>&nbsp; Live Project
+                            </a>
+                            <a href="https://github.com/Root-0/NeogCamp_KnowMeQuiz" target="_blank" rel="noreferrer" class="mx--1 btn--link">
+                                <span class="fab fa-github"></span>&nbsp;
+                                 View Source
+                            </a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="project--card">
+                    <!-- <div class="project--image">
+                        <img src="" alt="project image">
+                    </div> -->
+                    <span class="project--ribbon">Mark 02</span>
                     <div class="project--info">
                         <h3 class="my--1">CLI Quiz - Riddler</h3>
                         <div class="project--tags py--1 flex">
@@ -143,10 +174,182 @@
                             <br> This was a part of <a href="https://neog.camp" target="_blank" class="">Neog.camp's</a> level zero.
                         </div>
                         <div class="project--card--buttons">
-                            <a href="" class="btn--link btn--primary">
+                            <a href="https://repl.it/@thecoon/lessonOneassignment1?embed=1&output=1" target="_blank" rel="noreferrer" class="btn--link btn--primary">
                                 <span class="fa fa-external-link-alt"></span>&nbsp; Live Project
                             </a>
-                            <a href="" class="mx--1 btn--link">
+                            <a href="https://github.com/Root-0/NeogCamp_CLI_Riddler" target="_blank" rel="noreferrer" class="mx--1 btn--link">
+                                <span class="fab fa-github"></span>&nbsp;
+                                 View Source
+                            </a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="project--card">
+                    <!-- <div class="project--image">
+                        <img src="" alt="project image">
+                    </div> -->
+                    <span class="project--ribbon">Mark 3,4,5</span>
+                    <div class="project--info">
+                        <h3 class="my--1">Portfolio website hosted on Netlify</h3>
+                        <div class="project--tags py--1 flex">
+                            <small class="project--tag">
+                                HTML
+                            </small>
+                            <small class="project--tag">
+                                CSS
+                            </small>
+                            <small class="project--tag">
+                                Github
+                            </small>
+                            <small class="project--tag">
+                                Netlify
+                            </small>
+                        </div>
+                        <div class="project--desc py--1">
+                            Hosting a portfolio site using Github plus Netlify integration. 
+                            Add projects page and blogs page with all details.
+                            <br> <small class="">Note: No CSS framework was used while making this site.</small> 
+                        </div>
+                        <div class="project--card--buttons">
+                            <a href="https://akshayr.netlify.app" target="_blank" rel="noreferrer" class="btn--link btn--primary">
+                                <span class="fa fa-external-link-alt"></span>&nbsp; Live Project
+                            </a>
+                            <a href="https://github.com/Root-0/NeogCamp_Portfolio" target="_blank" rel="noreferrer" class="mx--1 btn--link">
+                                <span class="fab fa-github"></span>&nbsp;
+                                 View Source
+                            </a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="project--card">
+                    <!-- <div class="project--image">
+                        <img src="" alt="project image">
+                    </div> -->
+                    <span class="project--ribbon">Mark 06</span>
+                    <div class="project--info">
+                        <h3 class="my--1">Minion Translator</h3>
+                        <div class="project--tags py--1 flex">
+                            <small class="project--tag">
+                                Javascript
+                            </small>
+                            <small class="project--tag">
+                                Fetch API
+                            </small>
+                            <small class="project--tag">
+                                Funtranslations API
+                            </small>
+                        </div>
+                        <div class="project--desc py--1">
+                            Translate your sentences into Banana language with this web app. Fetches translations from an API.
+                        </div>
+                        <div class="project--card--buttons">
+                            <a href="https://translate2minion.netlify.app/" target="_blank" rel="noreferrer" class="btn--link btn--primary">
+                                <span class="fa fa-external-link-alt"></span>&nbsp; Live Project
+                            </a>
+                            <a href="https://github.com/Root-0/NeogCamp_lesson4_live" target="_blank" rel="noreferrer" class="mx--1 btn--link">
+                                <span class="fab fa-github"></span>&nbsp;
+                                 View Source
+                            </a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="project--card">
+                    <!-- <div class="project--image">
+                        <img src="" alt="project image">
+                    </div> -->
+                    <span class="project--ribbon">Mark 07</span>
+                    <div class="project--info">
+                        <h3 class="my--1">Pirate Speak</h3>
+                        <div class="project--tags py--1 flex">
+                            <small class="project--tag">
+                                Javascript
+                            </small>
+                            <small class="project--tag">
+                                Fetch API
+                            </small>
+                            <small class="project--tag">
+                                Funtranslations API
+                            </small>
+                        </div>
+                        <div class="project--desc py--1">
+                            An app to translate english to pirate vernacular. It's built with vanilla js, css and deployed on netlify. It uses fetch api to get data from funtranslations pirate api. 
+                        </div>
+                        <div class="project--card--buttons">
+                            <a href="https://piratespeak-neogcamp.netlify.app" target="_blank" rel="noreferrer" class="btn--link btn--primary">
+                                <span class="fa fa-external-link-alt"></span>&nbsp; Live Project
+                            </a>
+                            <a href="https://github.com/Root-0/NeogCamp_PirateSpeak" target="_blank" rel="noreferrer" class="mx--1 btn--link">
+                                <span class="fab fa-github"></span>&nbsp;
+                                 View Source
+                            </a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="project--card">
+                    <!-- <div class="project--image">
+                        <img src="" alt="project image">
+                    </div> -->
+                    <span class="project--ribbon">Mark 08</span>
+                    <div class="project--info">
+                        <h3 class="my--1">Emoji Interpreter</h3>
+                        <div class="project--tags py--1 flex">
+                            <small class="project--tag">
+                                React.js - Basics
+                            </small>
+                            <small class="project--tag">
+                                JSX
+                            </small>
+                            <small class="project--tag">
+                                CSS
+                            </small>
+                        </div>
+                        <div class="project--desc py--1">
+                            App that interprets the meaning of an emoji. Its made in React and uses JSX.
+                            It's deployed on CodeSandBox.
+                        </div>
+                        <div class="project--card--buttons">
+                            <a href="https://yj13m.csb.app/" target="_blank" rel="noreferrer" class="btn--link btn--primary">
+                                <span class="fa fa-external-link-alt"></span>&nbsp; Live Project
+                            </a>
+                            <a href="https://github.com/Root-0/NeogCamp_lesson5_emoji" target="_blank" rel="noreferrer" class="mx--1 btn--link">
+                                <span class="fab fa-github"></span>&nbsp;
+                                 View Source
+                            </a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="project--card">
+                    <!-- <div class="project--image">
+                        <img src="" alt="project image">
+                    </div> -->
+                    <span class="project--ribbon">Mark 09</span>
+                    <div class="project--info">
+                        <h3 class="my--1">TED talks recommender</h3>
+                        <div class="project--tags py--1 flex">
+                            <small class="project--tag">
+                                React.js - Basics
+                            </small>
+                            <small class="project--tag">
+                                JSX
+                            </small>
+                            <small class="project--tag">
+                                CSS
+                            </small>
+                        </div>
+                        <div class="project--desc py--1">
+                            App that recommends the user my favourite TED talks depending on the genre selected. Its made in React and uses JSX.
+                            It's deployed on CodeSandBox.
+                        </div>
+                        <div class="project--card--buttons">
+                            <a href="https://p5598.csb.app/" target="_blank" rel="noreferrer" class="btn--link btn--primary">
+                                <span class="fa fa-external-link-alt"></span>&nbsp; Live Project
+                            </a>
+                            <a href="https://github.com/Root-0/NeogCamp-Recommender" target="_blank" rel="noreferrer" class="mx--1 btn--link">
                                 <span class="fab fa-github"></span>&nbsp;
                                  View Source
                             </a>
