--- a/index.html
+++ b/index.html
@@ -92,6 +92,42 @@
 
             <div class="project--card">
                 <div class="project--image">
+                    <img src="/img/projects/vue_md.png" alt="project screenshot">
+                </div>
+                <div class="project--info">
+                    <h3 class="my--1">Markdown Viewer</h3>
+                    <div class="project--tags py--1 flex">
+                        <small class="project--tag">
+                            Vuejs
+                        </small>
+                        <small class="project--tag">
+                            Inkline
+                        </small>
+                        <small class="project--tag">
+                            SCSS
+                        </small>
+                        <small class="project--tag">
+                            Vue-markdown
+                        </small>
+                    </div>
+                    <div class="project--desc py--1">
+                        A web-app to preview your markdown files or markdown code. 
+                        You can upload a markdown file or just use online editor to write markdown and check its preview. <br>
+                    </div>
+                    <div class="project--card--buttons">
+                        <a href="https://vue-markdown-viewer.netlify.app/" target="_blank" rel="noreferrer" class="btn--link btn--primary">
+                            <span class="fa fa-external-link-alt"></span>&nbsp; Live Project
+                        </a>
+                        <a href="https://github.com/Root-0/vue_md_previewer" target="_blank" rel="noreferrer" class="mx--1 btn--link">
+                            <span class="fab fa-github"></span>&nbsp;
+                             View Source
+                        </a>
+                    </div>
+                </div>
+            </div>
+
+            <!-- <div class="project--card">
+                <div class="project--image">
                     <img src="/img/projects/vueshop2.jpg" alt="project image">
                 </div>
                 <div class="project--info">
@@ -125,43 +161,44 @@
                         </a>
                     </div>
                 </div>
-            </div>
+            </div> -->
+
             <div class="project--card">
                 <div class="project--image">
-                    <img src="/img/projects/vue_md.png" alt="project screenshot">
+                    <img src="/img/projects/piratespeak.jpg" alt="project image">
                 </div>
                 <div class="project--info">
-                    <h3 class="my--1">Markdown Viewer</h3>
+                    <h3 class="my--1">Pirate Speak - Translator</h3>
                     <div class="project--tags py--1 flex">
                         <small class="project--tag">
-                            Vuejs
+                            Mini-project
                         </small>
                         <small class="project--tag">
-                            Inkline
+                            Vanilla JS
                         </small>
                         <small class="project--tag">
-                            SCSS
+                            CSS
                         </small>
                         <small class="project--tag">
-                            Vue-markdown
+                            Fetch API
                         </small>
                     </div>
                     <div class="project--desc py--1">
-                        A web-app to preview your markdown files or markdown code. <br>
-                        You can upload a markdown file or just use online editor to write markdown and check its preview. <br>
+                        An app to translate english to pirate vernacular. It's built with vanilla js, css and deployed on netlify.
+                        It uses fetch api to get data from funtranslations pirate api.
+                        This project was made during level0 of Neog.Camp
                     </div>
                     <div class="project--card--buttons">
-                        <a href="" class="btn--link btn--primary">
+                        <a href="https://piratespeak-neogcamp.netlify.app" target="_blank" rel="noreferrer" class="btn--link btn--primary">
                             <span class="fa fa-external-link-alt"></span>&nbsp; Live Project
                         </a>
-                        <a href="" class="mx--1 btn--link">
+                        <a href="https://github.com/Root-0/NeogCamp_PirateSpeak" target="_blank" rel="noreferrer" class="mx--1 btn--link">
                             <span class="fab fa-github"></span>&nbsp;
                              View Source
                         </a>
                     </div>
                 </div>
             </div>
-
         </div>
     </div>
 
