--- a/projects.html
+++ b/projects.html
@@ -77,7 +77,7 @@
                 </div>
             </div> -->
             
-            <div class="project--card">
+            <div class="featured project--card">
                 <div class="project--image">
                     <img src="/img/projects/vue_md.png" alt="project screenshot">
                 </div>
