Add dummy blogs

--- a/blog.html
+++ b/blog.html
@@ -42,6 +42,7 @@
                 <div class="blog--card">
                     <div class="project--info">
                         <h3 class="my--1 text--spacing">How to create underline effect using css pseudo-elements like ::before and ::after?</h3>
+                        <small class="">16 December 2020</small>
                         <div class="project--tags py--1 flex">
                             <small class="project--tag">
                                 CSS
@@ -54,19 +55,33 @@
                             </small>
                         </div>
                         <div class="project--desc py--1">
+                            <p class="">
+                                Dummy text: Its function as a filler or as a tool for comparing the visual impression of different typefaces Dummy text is text that is used in the publishing industry or by web designers to occupy the space which will later be filled with 'real' content. This is required when, for example, the final text is not yet available. Dummy text is also known as 'fill text'.
+                            </p>
+                                Rext that is used in the publishing industry or by web designers to occupy the space which will later be filled with 'real' content. This is required when, for example, the final text is not yet available. Dummy text is also known as 'fill text'.
+                            <p class="">
+                                Dummy text: Its function as a filler or as a tool for comparing the visual impression of different typefaces Dummy text is text that is used in the publishing industry or by web designers to occupy the space which will later be filled with 'real' content. This is required when, for example, the final text is not yet available. Dummy text is also known as 'fill text'.
+                                Dummy text: Its function as a filler or as a tool for comparing the visual impression of different typefaces Dummy text is text that is used in the publishing industry or by web designers to occupy the space which will later be filled with 'real' content. This is required when, for example, the final text is not yet available. Dummy text is also known as 'fill text'.
+                            </p>
                             Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eaque, repudiandae aperiam. Minus assumenda modi aspernatur ducimus aperiam, cupiditate ratione vitae delectus! Odit, molestiae quam eum quia corrupti pariatur odio vel?
+                            
+                            <p class="">
+                                Dummy text: Its function as a filler or as a tool for comparing the visual impression of different typefaces Dummy text is text that is used in the publishing industry or by web designers to occupy the space which will later be filled with 'real' content. This is required when, for example, the final text is not yet available. Dummy text is also known as 'fill text'.
+                                Dummy text: Its function as a filler or as a tool for comparing the visual impression of different typefaces Dummy text is text that is used in the publishing industry or by web designers to occupy the space which will later be filled with 'real' content. This is required when, for example, the final text is not yet available. Dummy text is also known as 'fill text'.
+                            </p>
                         </div>
-                        <div class="project--card--buttons">
+                        <!-- <div class="project--card--buttons">
                             <a href="" class="btn--link btn--primary">
                                 <span class="fa fa-eye"></span>&nbsp; View blog
                             </a>
-                        </div>
+                        </div> -->
                     </div>
                 </div>
 
                 <div class="blog--card">
                     <div class="project--info">
                         <h3 class="my--1 text--spacing">Getting started with tailwindcss in your npm project.</h3>
+                        <small class="">15 December 2020</small>
                         <div class="project--tags py--1 flex">
                             <small class="project--tag">
                                 TailwindCss
@@ -76,13 +91,24 @@
                             </small>
                         </div>
                         <div class="project--desc py--1">
+                            Dummy text: Its function as a filler or as a tool for comparing the visual impression of different typefaces Dummy text is text that is used in the publishing industry or by web designers to occupy the space which will later be filled with 'real' content. This is required when, for example, the final text is not yet available. Dummy text is also known as 'fill text'.
+                            Dummy text: Its function as a filler or as a tool for comparing the visual impression of different typefaces Dummy text is text that is used in the publishing industry or by web designers to occupy the space which will later be filled with 'real' content. This is required when, for example, the final text is not yet available. Dummy text is also known as 'fill text'.
+                            <p class="">
+                                Dummy text: Its function as a filler or as a tool for comparing the visual impression of different typefaces Dummy text is text that is used in the publishing industry or by web designers to occupy the space which will later be filled with 'real' content. This is required when, for example, the final text is not yet available. Dummy text is also known as 'fill text'.
+                                Dummy text: Its function as a filler or as a tool for comparing the visual impression of different typefaces Dummy text is text that is used in the publishing industry or by web designers to occupy the space which will later be filled with 'real' content. This is required when, for example, the final text is not yet available. Dummy text is also known as 'fill text'.
+                            </p>
                             Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eaque, repudiandae aperiam. Minus assumenda modi aspernatur ducimus aperiam, cupiditate ratione vitae delectus! Odit, molestiae quam eum quia corrupti pariatur odio vel?
+                            
+                            <p class="">
+                                Dummy text: Its function as a filler or as a tool for comparing the visual impression of different typefaces Dummy text is text that is used in the publishing industry or by web designers to occupy the space which will later be filled with 'real' content. This is required when, for example, the final text is not yet available. Dummy text is also known as 'fill text'.
+                                Dummy text: Its function as a filler or as a tool for comparing the visual impression of different typefaces Dummy text is text that is used in the publishing industry or by web designers to occupy the space which will later be filled with 'real' content. This is required when, for example, the final text is not yet available. Dummy text is also known as 'fill text'.
+                            </p>
                         </div>
-                        <div class="project--card--buttons">
+                        <!-- <div class="project--card--buttons">
                             <a href="" class="btn--link btn--primary">
                                 <span class="fa fa-eye"></span>&nbsp; View blog
                             </a>
-                        </div>
+                        </div> -->
                     </div>
                 </div>
             </div>
