--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
                         Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eaque, repudiandae aperiam. Minus assumenda modi aspernatur ducimus aperiam, cupiditate ratione vitae delectus! Odit, molestiae quam eum quia corrupti pariatur odio vel?
                     </div>
                     <div class="project--card--buttons">
-                        <a href="" class="btn--link btn--primary">
+                        <a href="/blog.html" class="btn--link btn--primary">
                             <span class="fa fa-eye"></span>&nbsp; View blog
                         </a>
                     </div>
@@ -256,7 +256,7 @@
                         Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eaque, repudiandae aperiam. Minus assumenda modi aspernatur ducimus aperiam, cupiditate ratione vitae delectus! Odit, molestiae quam eum quia corrupti pariatur odio vel?
                     </div>
                     <div class="project--card--buttons">
-                        <a href="" class="btn--link btn--primary">
+                        <a href="/blog.html" class="btn--link btn--primary">
                             <span class="fa fa-eye"></span>&nbsp; View blog
                         </a>
                     </div>
